# dgg

./: Cargo.toml  LICENSE  README.md  config.dev.example.toml  config.toml
.cargo-husky/hooks/: pre-commit  pre-push
resources/test_samples/events/: MSG  NAMES  PIN  QUIT
src/: config.rs  lib.rs  main.rs
src/common/: cache.rs  macros.rs  mod.rs
src/common/serde/: color.rs  datetime.rs  mod.rs
src/dgg/: mod.rs
src/dgg/chat/: chat_client.rs  mock_server.rs  mod.rs
src/dgg/models/: emote.rs  event.rs  flair.rs  image.rs  mod.rs  user.rs
src/dgg/utilities/: cdn.rs
src/gui/: app.rs  app_services.rs  chat_view.rs  mod.rs
src/gui/views/: chat_input_view.rs  chat_message_view.rs  chat_view.rs  mod.rs
